1.5.0 (2010-02-10)
    * Major rewrite of how we retrieve package information. We no longer
      need to keep track of disabled components ourselves, and an uninstall
      of Autostarts no longer is an issue. The new backend also makes
      it possible for us to show additional events that are not in our
      database. Last but not least we can now show components that are
      disabled by default, and make a clean distinction between that
      initial state and changes by the user.
    * Compiled against 2.1 SDK.
    * Included pretty names and descriptions for a large number of new 
      events.

1.2.2 (2010-01-31)
	* Added German translation (does not include event texts).
	* Added support for two new events (SECRET_CODE, SPN_STRINGS_UPDATED).
	* Improved handling of certain events (like PACKAGE_INSTALLED and
	  friends) that previously didn't properly show up in many cases.
	  There is still some work to do here.
	* On first use and on the help screen we now show information about
	  how to workaround the freeze bug in the Superuser Whitelist app.

1.2.1 (2009-10-29)
	* "Eclair-ready" (compiled against 2.0).
	* Support all screen sizes.
	* Support various new events introduced in 1.6 and 2.0.

1.2.0 (2009-10-17)
	* Fixed a pretty serious crash on almost every orientation change.
	* Added option to only show disabled components.

1.1.9 (2009-10-05)
	* Warn the user more clearly about the dangers of uninstalling the
	  app while components are still disabled.
	* Support orientation change.
	* Minor architecture improvements under the hood, preparing for
	  bigger things to come.

1.1.4 (2009-09-22)
	* Support missing camera.NEW_PICTURE intent.
	* Improved logging when an error occurs during component state change,
	  to allow investigating problems.
	* "Donut-ready" (compiled against 1.6).

1.1.3 (2009-07-30)
	* Fixed exception when trying to disable on some non-rooted devices.
	* Fixed rare exception during system configuration change.